# stardial

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: packaging.md
man/: stardial.1
pkg/: .SRCINFO  PKGBUILD
snap/: snapcraft.yaml
src/: app.rs  cli.rs  main.rs  render.rs  theme.rs  util.rs
src/effects/: mod.rs  scanline.rs  shooting_star.rs  starfield.rs
src/font/: mod.rs
tests/: cli.rs
