[package]
name = "stardial"
version = "0.1.0"
edition = "2021"
description = "A space-anime themed terminal clock — superset of tty-clock"
license = "MIT"
authors = ["hisui"]

[dependencies]
# TUI framework (ratatui includes crossterm backend)
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Time handling
chrono = "0.4"

# Error handling with pretty backtraces
color-eyre = "0.6"

# Optional debug logging to file
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Fast PRNG for starfield effects
fastrand = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
